# workbench-core

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: conf.py  index.rst
output/: train_settings.json
settings/: optimize_settings.json  train_settings.json
src/workbench_api/: common.py  db.py  enums.py  main.py  models.py  utils.py
src/workbench_api/data/: db.py  repository.py
src/workbench_api/models/: base.py  optimize.py  predict.py
src/workbench_api/routers/: optimize.py  predict.py
src/workbench_api/www/: root.html
src/workbench_components/: __init__.py  workbench_configs.py  workbench_factory.py
src/workbench_components/common/: common_configs.py
src/workbench_components/workbench_config/: workbench_config.py  workbench_config_factory.py
src/workbench_components/workbench_data/: workbench_data.py  workbench_data_factory.py
src/workbench_components/workbench_logging/: logging_config.json  logging_configs.py  workbench_logger.py
src/workbench_components/workbench_logic/: workbench_logic.py  workbench_logic_factory.py
src/workbench_components/workbench_process/: workbench_process.py  workbench_process_factory.py
src/workbench_components/workbench_settings/: workbench_settings.py  workbench_settings_factory.py
src/workbench_components/workbench_source/: workbench_source.py  workbench_source_factory.py
src/workbench_components/workbench_transformer/: workbench_transformer.py  workbench_transformer_factory.py
src/workbench_components/workench_repository/: workbench_repository.py  workbench_repository_factory.py
src/workbench_core/: __init__.py  settings.py  workbench_factory.py
src/workbench_core/config/: config_factory.py
src/workbench_core/data_object/: data_object.py  data_object_factory.py  data_transfomer.py  data_transformer_factory.py
src/workbench_core/data_object copy/: data_object_factory.py
src/workbench_core/data_objects/: data_object.py  data_object_factory.py
src/workbench_core/data_transformer/: data_transfomer.py
src/workbench_core/data_transformers/: data_transfomer.py  data_transformer_factory.py
src/workbench_core/data_transformers copy/: data_transfomer.py
src/workbench_core/logging/: __init__.py  logger.py  logging_config.json  logging_configs.py  workbench_logger.py
src/workbench_core/process/: process.py  process_factory.py
src/workbench_core/workbench_config/: workbench_config.py  workbench_config_factory.py
src/workbench_core/workbench_data/: workbench_data.py
src/workbench_core/workbench_logging/: logging_configs.py  workbench_logger.py
src/workbench_core/workbench_process/: workbench_process.py  workbench_process_factory.py
src/workbench_core/workbench_source/: workbench_source.py  workbench_source_factory.py
src/workbench_core/workbench_transformer/: workbench_data_transformer_factory.py  workbench_transformer.py  workbench_transformer_factory.py
src/workbench_db/: db.py  enums.py  list_repository.py  main.py  models.py  repository.py  sql_repository.py
src/workbench_db/repositories/: list_repository.py  repository_factory.py  sql_repository.py
src/workbench_optimize/: __init__.py  common.py  optimize_data.py  optimize_factory.py  optimize_logic.py  optimize_settings.py  optimize_settings_model.py
src/workbench_optimize/transformers/: load_model.py  run_optimization.py
src/workbench_process/: __init__.py  common.py  configs.json  process.py  process_config.py  process_config_model.py  process_data.py  process_factory.py  process_logic.py  process_settings.py  process_settings_model.py
src/workbench_process/sources/: source_compressive_strength.py  source_factory.py
src/workbench_process/transformers/: calculate_percentages.py  create_model_objects.py  rename_columns.py  split_features_and_targets.py
src/workbench_process/utils/: utils_dataframes.py
src/workbench_train/: __init__.py  common.py  enums.py  train_data.py  train_factory.py  train_logic.py  train_settings.py  train_settings_model.py
src/workbench_train/transformers/: create_model_objects.py  create_preprocessor.py  custom_transformers.py  export_model.py  select_best_model.py  split_data.py  split_train_test_set.py  train_models.py
src/workbench_train/utils/: export.py  warning.py
src/workbench_utils/: common.py  composition.py  dataframes.py  enums.py  export.py  misc.py  missing.py  strings.py
tests/: conftest.py
tests/test_workbench_api/: conftest.py  examples.py  test_main.py  test_utils.py
tests/test_workbench_api/test_data/: test_repository.py
tests/test_workbench_api/test_models/: test_predict.py
tests/test_workbench_api/test_routers/: test_optimize.py  test_predict.py
tests/test_workbench_components/: conftest.py  test_workbench_factory.py
tests/test_workbench_components/test_workbench_config/: test_workbench_config.py  test_workbench_config_factory.py
tests/test_workbench_components/test_workbench_data/: test_workbench_data.py
tests/test_workbench_components/test_workbench_logging/: test_workench_logger.py
tests/test_workbench_components/test_workbench_logic/: test_workbench_logic.py  (+1 more)
tests/test_workbench_core/: conftest.py  test_workbench_factory.py
tests/test_workbench_db/: conftest.py  test_db.py  test_list_repository.py  test_repository.py  test_sql_repository.py
tests/test_workbench_optimize/: conftest.py  test_common.py  test_optimize_config_model.py  test_optimize_data.py  test_optimize_factory.py  test_optimize_logic.py  test_optimize_settings.py
tests/test_workbench_process/: conftest.py  test_process.py  test_process_config.py  test_process_config_model.py  test_process_data.py  test_process_factory.py  test_process_logic.py  test_process_settings.py
tests/test_workbench_train/: conftest.py  test_train_config_model.py  test_train_data.py  test_train_factory.py  test_train_logic.py  test_train_settings.py
tests/test_workbench_utils/: test_composition.py  test_dataframes.py  test_export.py  test_strings.py  test_utils_dataframes.py  test_warning.py
(+51 files in other folders)
