[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "workbench-core"
version = "0.0.1"
description = "Core library for the Workbench project"
authors = ["Jean Dos Santos <jeandsantos88@gmail.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
packages = [{ include = "workbench_core", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pydocstyle = "^6.3.0"
pylint = "^3.0.3"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.1"
tox = "^4.12.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.pylint]
max-line-length = 120
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
]
[tool.mypy]
mypy_path = "src"
ignore_missing_imports = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --verbose --cov=src --cov-config=pyproject.toml"
pythonpath = ["src"]
testpaths = ["tests"]
log_cli = true
log_cli_level = "WARNING"

[tool.pydocstyle]
convention = "google"
match_dir = "src"
add_ignore = [
    "D100",
    "D104",
    "D105",
    "D107",
    "D203",
    "D212",
    "D213",
    "D404",
    "D406",
    "D407",
    "D413",
]

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 4.12.1
envlist = py311, py312
isolated_build = true

[testenv]
# https://python-poetry.org/docs/faq/#usecase-1
allowlist_externals = poetry
deps =
    pytest
commands =
    poetry run pytest  --verbose --import-mode importlib --cov=src --cov-config=pyproject.toml tests

# # https://python-poetry.org/docs/faq/#usecase-2
# allowlist_externals = poetry
# commands_pre =
#     poetry install --no-root --sync
# commands =
#     poetry run pytest  --verbose --import-mode importlib --cov=src --cov-config=pyproject.toml tests
"""

[tool.coverage.run]
branch = true
source = ["workbench_core"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]
